--- a/ClashOfSnakes/ClashOfSnakes.csproj
+++ b/ClashOfSnakes/ClashOfSnakes.csproj
@@ -52,8 +52,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SinglePGame.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -124,6 +126,54 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\food.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\headA1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\headA2.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\headA3.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\headA4.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\headB1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\headB2.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\headB3.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\headB4.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tailA1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tailA2.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tailA3.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tailA4.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tailB1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tailB2.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tailB3.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tailB4.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
